--- a/VisaData/Views/Home/Index.cshtml
+++ b/VisaData/Views/Home/Index.cshtml
@@ -6,170 +6,236 @@
 <dir><h1>Заполните все поля анкеты</h1></dir>
 
 <form method="post" asp-controller="Home" asp-action="SaveData">
-    <h2>Личные данные</h2>
-    <dir class="form-group">
-        <label for="name">ФИО заполнителя(На родном языке):</label>
-        <p><input type="text" id="name" name="name"/></p>
-    </dir>
+<h2>Личные данные</h2>
+<dir class="form-group">
+    <label for="name">ФИО заполнителя(На родном языке):</label>
+    <p><input type="text" id="name" name="name"/></p>
+</dir>
 
-    <dir class="form-group">
-        <label for="secondName">Использовали ли вы когда-нибудь другие имена?<br> (Девичья фамилия, псевдоним, профессиональное имя)Укажите это имя.:</label>
-        <p><input type="text" id="secondName" name="secondName"/></p>
+<dir class="form-group">
+    <label for="secondName">Использовали ли вы когда-нибудь другие имена?<br> (Девичья фамилия, псевдоним, профессиональное имя)Укажите это имя.:</label>
+    <p><input type="text" id="secondName" name="secondName"/></p>
     
+
+    <div class="form-group">
+        <label>Семейное положение:</label>
+        <p><select name="marital_status">
+            <option value=0>Женат/замужем</option>
+            <option value=1>Гражданский брак</option>
+            <option value=2>Холост</option>
+            <option value=3>Вдовец/вдова</option>
+            <option value=4>В разводе</option>
+            <option value=5>Официально не живете вместе</option>
+            <option value=6>Другое</option>
+        </select></p>
+    </div>
+</dir>
+    
+<h2>Данные о рождении</h2>
+    
+<dir class="form-group">
+    <label for="year">Год рождения:</label>
+    <p><input type="number" id="year" name="year"/></p>
+    <label for="month">Месяц рождения:</label>
+    <p><input type="number" id="month" name="month"/></p>
+    <label for="day">День рождения:</label>
+    <p><input type="number" id="day" name="day"/></p>
+        
+    <label for="birthSity">Город рождения:</label>
+    <p><input type="text" id="birthSity" name="birthSity"/></p>
+        
+    <label for="birthCountry">Страна рождения:</label>
+    <p><input type="text" id="birthCountry" name="birthCountry"/></p>
+</dir>
+    
+<h2>Гражданство</h2>
+    
+<div class="form-group">
+    <div>
+        <label for="citizenship">Гражданство:</label>
+        <p><input type="text" id="citizenship" name="citizenship"/></p>
+
 
         <div class="form-group">
-            <label>Семейное положение:</label>
-            <p><select name="marital_status">
-                <option value=0>Женат/замужем</option>
-                <option value=1>Гражданский брак</option>
-                <option value=2>Холост</option>
-                <option value=3>Вдовец/вдова</option>
-                <option value=4>В разводе</option>
-                <option value=5>Официально не живете вместе</option>
-                <option value=6>Другое</option>
-            </select></p>
+            <input type="checkbox" id="hasOtherCitizenship" name="hasOtherCitizenship" value="true" onchange="toggleOtherCitizenshipFields()"/>
+            <label for="hasOtherCitizenship">Имеете ли вы гражданство в другой стране?</label>
         </div>
-    </dir>
-    
-    <h2>Данные о рождении</h2>
-    
-    <dir class="form-group">
-        <label for="year">Год рождения:</label>
-        <p><input type="number" id="year" name="year"/></p>
-        <label for="month">Месяц рождения:</label>
-        <p><input type="number" id="month" name="month"/></p>
-        <label for="day">День рождения:</label>
-        <p><input type="number" id="day" name="day"/></p>
-        
-        <label for="birthSity">Город рождения:</label>
-        <p><input type="text" id="birthSity" name="birthSity"/></p>
-        
-        <label for="birthCountry">Страна рождения:</label>
-        <p><input type="text" id="birthCountry" name="birthCountry"/></p>
-    </dir>
-    
-    <h2>Гражданство</h2>
-    
-    <div class="form-group">
-        <div>
-            <label for="citizenship">Гражданство:</label>
-            <p><input type="text" id="citizenship" name="citizenship"/></p>
 
-
+        <div id="otherCitizenshipFields" style="display: none;">
             <div class="form-group">
-                <input type="checkbox" id="hasOtherCitizenship" name="hasOtherCitizenship" value="true" onchange="toggleOtherCitizenshipFields()"/>
-                <label for="hasOtherCitizenship">Имеете ли вы гражданство в другой стране?</label>
+                <input type="checkbox" id="hasOtherCountryPassport" name="hasOtherCountryPassport" value="true" onchange="toggleOtherCountryPassportField()"/>
+                <label for="hasOtherCountryPassport">Имеете ли вы паспорт этой страны?</label>
             </div>
 
-            <div id="otherCitizenshipFields" style="display: none;">
+            <div id="otherCountryPassportField" style="display: none;">
                 <div class="form-group">
-                    <input type="checkbox" id="hasOtherCountryPassport" name="hasOtherCountryPassport" value="true" onchange="toggleOtherCountryPassportField()"/>
-                    <label for="hasOtherCountryPassport">Имеете ли вы паспорт этой страны?</label>
-                </div>
-
-                <div id="otherCountryPassportField" style="display: none;">
-                    <div class="form-group">
-                        <label for="otherCountryPassportNumber">Номер паспорта данной страны:</label>
-                        <p><input type="text" id="otherCountryPassportNumber" name="otherCountryPassportNumber"/></p>
-                    </div>
+                    <label for="otherCountryPassportNumber">Номер паспорта данной страны:</label>
+                    <p><input type="text" id="otherCountryPassportNumber" name="otherCountryPassportNumber"/></p>
                 </div>
             </div>
         </div>
     </div>
+</div>
 
+<div class="form-group">
+    <input type="checkbox" id="isPermanentResident" name="isPermanentResident" value="true" onchange="toggleResidenceCountryField()"/>
+    <label for="isPermanentResident">Являетесь ли вы постоянным жителем страны, отличающейся от той, которую вы указали в гражданстве?</label>
+</div>
+
+<div id="residenceCountryField" style="display: none;">
     <div class="form-group">
-        <input type="checkbox" id="isPermanentResident" name="isPermanentResident" value="true" onchange="toggleResidenceCountryField()"/>
-        <label for="isPermanentResident">Являетесь ли вы постоянным жителем страны, отличающейся от той, которую вы указали в гражданстве?</label>
+        <label for="residenceCountry">В какой стране вы проживаете?</label>
+        <p><input type="text" id="residenceCountry" name="residenceCountry"/></p>
     </div>
-
-    <div id="residenceCountryField" style="display: none;">
-        <div class="form-group">
-            <label for="residenceCountry">В какой стране вы проживаете?</label>
-            <p><input type="text" id="residenceCountry" name="residenceCountry"/></p>
-        </div>
-    </div>
+</div>
     
     
-    <h2>Пребывание в Америке</h2>
-    <div class="form-group">
+<h2>Пребывание в Америке</h2>
+<div class="form-group">
         
       
-        <label>
-            <div class="form-group">
-                <input type="checkbox" name="visited_usa"> Были ли вы в США ранее?
-            </div>
-        </label>
-        <div id="usa-fields" style="display:none;">
-            <div class="form-group">
-                <label> Национальный идентификационный номер:</label>
-                <p><input type="text" name="national_id"></p>
+    <label>
+        <div class="form-group">
+            <input type="checkbox" name="visited_usa"> Были ли вы в США ранее?
+        </div>
+    </label>
+    <div id="usa-fields" style="display:none;">
+        <div class="form-group">
+            <label> Национальный идентификационный номер:</label>
+            <p><input type="text" name="national_id"></p>
                
                 
-                <label>Номер социального страхования:</label>
-                <p><input type="text" name="social_security_number"></p>
+            <label>Номер социального страхования:</label>
+            <p><input type="text" name="social_security_number"></p>
                 
-                <label>Номер налогоплательщика:</label>
-                <p> <input type="text" name="taxpayer_number"></p>
+            <label>Номер налогоплательщика:</label>
+            <p> <input type="text" name="taxpayer_number"></p>
                     
-            </div>
         </div>
     </div>
+</div>
     
-    <h2>Информация о поездке</h2>
-    <div class="form-group">
-        <dir class="form-group">
-            <div class="form-group">
-                <label>Цель поездки в США.Выберите тип визы:</label>
-                <p><select id="visaType" name="visaType">
-                    <option value="A">A</option>
-                    <option value="B">B</option>
-                    <option value="C">C</option>
-                    <option value="D">D</option>
-                    <option value="E">E</option>
-                    <option value="F">F</option>
-                    <option value="G">G</option>
+<h2>Информация о поездке</h2>
+<div class="form-group">
+    <dir class="form-group">
+        <div class="form-group">
+            <label>Цель поездки в США.Выберите тип визы:</label>
+            <p><select id="visaType" name="visaType">
+                <option value="A">A</option>
+                <option value="B">B</option>
+                <option value="C">C</option>
+                <option value="D">D</option>
+                <option value="E">E</option>
+                <option value="F">F</option>
+                <option value="G">G</option>
+            </select></p>
+            <div id="visaTypeB" style="display:none;">
+                <label>Выберите вид визы:</label>
+                <p><select name="visaTypeB">
+                    <option value="0">Бизнес или конференция</option>
+                    <option value="1">Туристическая или медицинская</option>
+                    <option value="2">Бизнес и туризм</option>
                 </select></p>
-                <div id="visaTypeB" style="display:none;">
-                    <label>Выберите вид визы:</label>
-                    <p><select name="visaTypeB">
-                        <option value="0">Бизнес или конференция</option>
-                        <option value="1">Туристическая или медицинская</option>
-                        <option value="2">Бизнес и туризм</option>
-                    </select></p>
-                </div>
-                <label>
-                    <input type="checkbox" name="travelPurposeCheckbox" id="travelPurposeCheckbox">
-                    Есть ли у вас цель поездки?
-                </label>
-                
-                <div id="travelPurposeInput" style="display:none;">
-                    <p><input type="text" name="travelPurpose"></p>
-                </div>
-                <div><label for="arrivalDate">Приблизительная дата прилета:</label><br>
-                    <input type="text" id="arrivalDate" name="arrivalDate"><br>
-                                     
-                    <label for="arrivalCity">Город аэропорта прилета:</label><br>
-                    <input type="text" id="arrivalCity" name="arrivalCity"><br>
-                                     
-                    <label for="departureDate">Приблизительная дата вылета:</label><br>
-                    <input type="text" id="departureDate" name="departureDate"><br>
-                                     
-                    <label for="departureCity">Город аэропорта вылета:</label><br>
-                    <input type="text" id="departureCity" name="departureCity"><br></div>
-                <label for="places">Места, которые вы хотите посетить (5-8 названий туристических мест) *важно знать ответ для консула</label>
-                <div id="places-container">
-                    <div>
-                        <input type="text" name="place1" id="place1" required>
-                        <button type="button" class="add-btn">+</button>
-                    </div>
-                </div>
-                
             </div>
-        </dir>
+            <label>
+                <input type="checkbox" name="travelPurposeCheckbox" id="travelPurposeCheckbox">
+                Есть ли у вас цель поездки?
+            </label>
+                
+            <div id="travelPurposeInput" style="display:none;">
+                <p><input type="text" name="travelPurpose"></p>
+            </div>
+            <div><label for="arrivalDate">Приблизительная дата прилета:</label><br>
+                <input type="text" id="arrivalDate" name="arrivalDate"><br>
+                                     
+                <label for="arrivalCity">Город аэропорта прилета:</label><br>
+                <input type="text" id="arrivalCity" name="arrivalCity"><br>
+                                     
+                <label for="departureDate">Приблизительная дата вылета:</label><br>
+                <input type="text" id="departureDate" name="departureDate"><br>
+                                     
+                <label for="departureCity">Город аэропорта вылета:</label><br>
+                <input type="text" id="departureCity" name="departureCity"><br></div>
+            <label for="places">Места, которые вы хотите посетить (5-8 названий туристических мест) *важно знать ответ для консула</label>
+            <div id="places-container">
+                <div>
+                    <input type="text" name="place1" id="place1" required>
+                    <button type="button" class="add-btn">+</button>
+                </div>
+            </div>
+            <label for="hotelAdress">Адрес, где вы остановитесь в США (адрес с индексом, номер телефона без пробелов предполагаемого отеля)</label><br>
+            <input type="text" id="hotelAdress" name="hotelAdress"><br>
+            <label>Кто платит за вашу поездку:</label>
+            <p><select id="visaType" name="visaType">
+                <option value=0>сам</option>
+                <option value=1>другой человек</option>
+                <option value=2>нынешний работодатель</option>
+                <option value=3>работодатель в США</option>
+                <option value=4>другая компания или организация</option>
+            </select></p>
+                
+        </div>
+    </dir>
+</div>
+<h2>Спутники</h2>
+<label>
+    <input type="checkbox" name="other_people" onchange="showPeopleFields()">
+    Другие люди путешествуют с вами?
+</label>
+    
+<div id="people_fields" style="display:none">
+    <label>
+        <input type="checkbox" name="group">
+        Вы путешествуете с организацией или группой?
+    </label>
+    
+    <div id="people_list">
+        <div class="person">
+            <label>Фамилия и имя:
+                <input type="text" name="person_name[]">
+            </label>
+    
+            <label>Отношение:
+                <select name="person_relation[]">
+                    <option value="Родитель">Родитель</option>
+                    <option value="Ребенок">Ребенок</option>
+                    <option value="Супруг">Супруг</option>
+                    <option value="Другой родственник">Другой родственник</option>
+                    <option value="Друг">Друг</option>
+                    <option value="Деловой партнер">Деловой партнер</option>
+                </select>
+            </label>
+    
+            <button type="button" id="add_person" onclick="addPerson()">+</button>
+        </div>
     </div>
+</div>
+
+<h2>Информация о посещении США</h2>
+
+<div class="form-group">
+    <label for="us-visit">Были ли вы когда-нибудь в США?</label>
+    <input type="checkbox" id="us-visit" name="us-visit" onchange="showUsLicenseFields()">
+        
+    <div id="us-license" style="display: none;">
+        <label for="us-license-check">Получали ли вы права в США?</label>
+        <input type="checkbox" id="us-license-check" name="us-license-check" onchange="showUsLicenseFields()">
+    </div>
+    <div id="us-license-fields" style="display: none;">
+        <label for="license-number">Номер водительского удостоверения:</label>
+        <p><input type="text" id="license-number" name="license-number"></p>
+        <label for="license-state">Штат, где получали права:</label>
+        <p><input type="text" id="license-state" name="license-state"></p>
+    </div>
+</div>
 
 
-    <button type="submit">Start</button>
+
+    
+        
+
+
+<button type="submit">Start</button>
 </form>
 
 
@@ -266,4 +332,65 @@
           });
         });
       });
+    //спутники
+    function showPeopleFields() {
+      var fields = document.getElementById("people_fields");
+      if (document.getElementsByName("other_people")[0].checked) {
+        fields.style.display = "block";
+      } else {
+        fields.style.display = "none";
+      }
+    }
+    
+    function addPerson() {
+      var list = document.getElementById("people_list");
+      var newPerson = document.createElement("div");
+      newPerson.classList.add("person");
+    
+      var nameField = document.createElement("label");
+      nameField.innerHTML = "Фамилия и имя: <input type='text' name='person_name[]'>";
+    
+      var relationField = document.createElement("label");
+      relationField.innerHTML = "Отношение: <select name='person_relation[]'><option value='Родитель'>Родитель</option><option value='Ребенок'>Ребенок</option><option value='Супруг'>Супруг</option><option value='Другой родственник'>Другой родственник</option><option value='Друг'>Друг</option><option value='Деловой партнер'>Деловой партнер</option></select>";
+    
+      var removeButton = document.createElement("button");
+      removeButton.setAttribute("type", "button");
+      removeButton.classList.add("remove_person");
+      removeButton.innerHTML = "-";
+    
+      removeButton.onclick = function() {removePerson(this)};
+    
+      newPerson.appendChild(nameField);
+      newPerson.appendChild(relationField);
+      newPerson.appendChild(removeButton);
+    
+      list.appendChild(newPerson);
+    }
+    
+    function removePerson(button) {
+      var person = button.parentNode;
+      var list = person.parentNode;
+      list.removeChild(person);
+    }
+    //Информация о посещении США
+    function showUsLicenseFields() {
+        var usVisit = document.getElementById("us-visit");
+        var usLicense = document.getElementById("us-license");
+        var usLicenseCheck = document.getElementById("us-license-check");
+        var usLicenseFields = document.getElementById("us-license-fields");
+    
+        if (usVisit.checked) {
+          usLicense.style.display = "block";
+        } else {
+          usLicense.style.display = "none";
+          usLicenseFields.style.display = "none";
+          usLicenseCheck.checked = false;
+        }
+    
+        if (usLicenseCheck.checked) {
+          usLicenseFields.style.display = "block";
+        } else {
+          usLicenseFields.style.display = "none";
+        }
+      }
     </script>
